[tool.poetry]
name = "vg-stats"
version = "0.1.0"
description = ""
authors = ["Yousef Obeidat <y.linux96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.2.3"
pandas = "^1.3.4"
jupyter = "^1.0.0"
matplotlib = "^3.5.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
